--- a/templates/memes.html
+++ b/templates/memes.html
@@ -95,6 +95,7 @@
             border: 1px solid #ddd;
             padding: 8px;
             text-align: left;
+            vertical-align: middle;
         }
         .meme-table th {
             background-color: #f2f2f2;
@@ -121,13 +122,22 @@
             width: 5%;
             min-width: 60px;
         }
-        .meme-table th:nth-child(3), .meme-table td:nth-child(3) { /* Description / Owner */
-            width: 80%;
-            min-width: 150px;
-        }
-        .meme-table th:nth-child(4), .meme-table td:nth-child(4) { /* Counts */
+        .meme-table th:nth-child(3), .meme-table td:nth-child(3) { /* Thumb */
             width: 10%;
             min-width: 50px;
+        }
+        .meme-table th:nth-child(4), .meme-table td:nth-child(4) { /* Description / Owner */
+            width: 70%;
+            min-width: 150px;
+        }
+        .meme-table th:nth-child(5), .meme-table td:nth-child(5) { /* Counts */
+            width: 10%;
+            min-width: 50px;
+        }
+        .meme-table img {
+            max-width: 100%;
+            max-height: 50px; /* Maintains row height consistency */
+            display: block;
         }
         @media (max-width: 600px) {
             .content {
@@ -146,7 +156,10 @@
             .meme-table th, .meme-table td {
                 min-width: 40px;
             }
-            .meme-table th:nth-child(3), .meme-table td:nth-child(3) {
+            .meme-table th:nth-child(3), .meme-table td:nth-child(3) { /* Thumb */
+                min-width: 50px;
+            }
+            .meme-table th:nth-child(4), .meme-table td:nth-child(4) { /* Description / Owner */
                 min-width: 150px;
             }
             .header .user-info {
@@ -256,6 +269,7 @@
                 <tr>
                     <th><a href="?sort=id&order={{ 'asc' if request.args.get('sort') != 'id' or request.args.get('order') == 'desc' else 'desc' }}">ID</a></th>
                     <th><a href="?sort=type&order={{ 'asc' if request.args.get('sort') != 'type' or request.args.get('order') == 'desc' else 'desc' }}">Type</a></th>
+                    <th>Thumb</th>
                     <th><a href="?sort=description&order={{ 'asc' if request.args.get('sort') != 'description' or request.args.get('order') == 'desc' else 'desc' }}">Description / Owner</a></th>
                     <th><a href="?sort=counts&order={{ 'asc' if request.args.get('sort') != 'counts' or request.args.get('order') == 'desc' else 'desc' }}">Counts</a></th>
                 </tr>
@@ -278,6 +292,14 @@
                     <tr>
                         <td class="meme-id">{{ meme.meme_id }}</td>
                         <td class="meme-type">{{ meme.type }}</td>
+                        <td>
+                            {% if meme.meme_id is not none and meme.meme_id | int > 0 %}
+                                {% set thumbnail_path = url_for('static', filename='thumbnails/' ~ meme.meme_id ~ '.jpg') %}
+                                {% if thumbnail_path is defined and thumbnail_path | length > 0 %}
+                                    <img src="{{ thumbnail_path }}" alt="Thumbnail for asset {{ meme.meme_id }}">
+                                {% endif %}
+                            {% endif %}
+                        </td>
                         <td class="meme-description">
                             {% set download_url = meme.meme_url|get_download_url %}
                             {% if download_url and download_url != meme.meme_url %}
